--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/libs.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
-    <title>General Insuranse-Обьявления</title>
+    <title>General Insuranse-Cabinet</title>
 </head>
 
 <body>
