calculator+ registerModal done

--- a/src/decor-2.html
+++ b/src/decor-2.html
@@ -298,8 +298,6 @@
                             </div>
                         </div>
                         <div class="policyholder-form__group padding-0">
-
-
                             <form class="form-drop2">
                                 <div class="select-box4">
                                     <label for="select-box1" class="label select-box1"><span class="label-desc">Вид
@@ -309,7 +307,7 @@
                                         <option value="Choice 2">Квартира</option>
                                     </select>
                                 </div>
-                            </form>
+                            </form> 
 
                         </div>
                     </div>
@@ -381,7 +379,7 @@
                     <div class="decor-aside__price">
                         <span>300$</span>
                     </div>
-                    <a class="decor-aside__btn btn" href="#">Оформить полюс</a>
+                    <a id="payBtn1" class="decor-aside__btn btn" href="#">Оформить полюс</a>
                 </aside>
 
             </div>
