--- a/src/decor-2.html
+++ b/src/decor-2.html
@@ -177,7 +177,7 @@
 
                         <div class="calculator-item">
                             <h4 class="calculator-item__title">
-                                Страховой продукт "Квартира"
+                                Страхование имущество
                             </h4>
                             <div class="calculator-item__step">
                                 <div class="calculator-step">
@@ -188,95 +188,12 @@
                                         <span>Оплата и получение</span>
                                     </div>
                                 </div>
-                                <div class="calculator-item__subtitle">
-                                    <span>Срок действия полюса</span>
-                                </div>
-
-                                <p class="calculator-item__text">Полис действителен 12 месяцев начиная с
-                                    <span>19.11.2020</span>
-                                </p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="policyholder">
-                        <h4 class="policyholder-title">
-                            Страхователь
-                        </h4>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Имя">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Отчество">
-                            </div>
-                        </div>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Фамилия">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Дата рождения" id="date">
-                            </div>
-                        </div>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Email">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Номер телефона" id="numberPhone">
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="policyholder">
-                        <h4 class="policyholder-title">
-                            Паспортные данные
-                        </h4>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Серия и номер паспорта">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Дата выдачи" id="datePassport">
-                            </div>
-                        </div>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input policyholder-input--long">
-                                <input type="text" placeholder="Кем выдан">
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="policyholder">
-                        <h4 class="policyholder-title">
-                            Адрес постоянной регистрации
-                        </h4>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Индекс" id="indeksNumber">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Область/Город">
-                            </div>
-                        </div>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Район">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Улица/Квартал">
-                            </div>
-                        </div>
-                        <div class="policyholder-form__group padding-0">
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Номер дома">
-                            </div>
-                            <div class="policyholder-input">
-                                <input type="text" placeholder="Номер квартиры">
-                            </div>
-                        </div>
-                    </div>
                     <div class="policyholder">
                         <h4 class="policyholder-title">
                             Вводные поля
@@ -312,62 +229,27 @@
                         </div>
                     </div>
 
-                    <div class="policyholder">
-                        <h4 class="policyholder-title">
-                            Квартира
-                        </h4>
-                        <label class="policyholder-input__checkbox">
-
-                            <input type="checkbox" id="c3" name="cb">
-                            <label for="c3"></label>
-
-                            <p class="policyholder-subtitle">Cовпадает с адресом постоянной регистрации</p>
-
-                        </label>
-
-                        <div class="policyholder-form__group padding-0 policyholder-form__group--price">
-                            <div class="policyholder-form__price">
-                                <div class="policyholder-form__text">
-                                    <p>Цена к оплате:
-                                        <span>300$</span>
-                                    </p>
-                                </div>
-                                <a id="payBtn" class="policyholder-form__btn btn" href="#">Оплатить полюс</a>
-                            </div>
+                    <div class="policyholder-form__price">
+                        <div class="policyholder-form__text">
+                            <p>Цена к оплате:
+                                <span>10000 сум</span>
+                            </p>
                         </div>
+                        <a id="payBtn" class="policyholder-form__btn btn" href="#">Оплатить полюс</a>
                     </div>
                 </section>
 
                 <aside class="decor-aside">
-                    <h4 class="decor-aside__title">Страховой продукт <br>
-                        "Квартира"</h4>
+                    <h4 class="decor-aside__title">Страхование имущество</h4>
                     <div class="decor-aside__line"></div>
                     <ul class="decor-aside__block">
                         <li class="decor-aside__list">
                             <p>
                                 Конструктивные элементы:
                             </p>
-                            <span>3340 $</span>
+                            <span>0 сум</span>
                         </li>
-                        <li class="decor-aside__list">
-                            <p>
-                                Отделка и оборудование:
-                            </p>
-                            <span>2000 $</span>
-                        </li>
-                        <li class="decor-aside__list">
-                            <p>
-                                Домашнее имущество:
-                            </p>
-                            <span>1000 $</span>
-                        </li>
-                        <li class="decor-aside__list">
-                            <p>
-                                Ответственность <br>
-                                перед соседями:
-                            </p>
-                            <span>650 $</span>
-                        </li>
+                      
                         <div class="decor-aside__line"></div>
                         <li class="decor-aside__list">
                             Полис действует <br>
@@ -377,7 +259,7 @@
                     </ul>
 
                     <div class="decor-aside__price">
-                        <span>300$</span>
+                        <span>10000 сум</span>
                     </div>
                     <a id="payBtn1" class="decor-aside__btn btn" href="#">Оформить полюс</a>
                 </aside>
